修改更新潜在问题

--- a/rose-mes-synch/src/main/resources/application-dev.yml
+++ b/rose-mes-synch/src/main/resources/application-dev.yml
@@ -18,20 +18,11 @@ spring:
           username: aaa
           password: 123
           driver-class-name: com.microsoft.sqlserver.jdbc.SQLServerDriver
-  #  datasource:
-#    url: jdbc:sqlserver://10.10.10.141;databaseName=HJ_R7erp;allowMultiQueries=true
-#    username: sa
-#    password: 1qazxsw2~
-#    driver-class-name: com.microsoft.sqlserver.jdbc.SQLServerDriver
-#  mes-datasource:
-#    url: jdbc:sqlserver://47.119.139.33;databaseName=yunsuite_HongJie;allowMultiQueries=true
-#    username: DEMO
-#    password: KF123123..
-#    driver-class-name: com.microsoft.sqlserver.jdbc.SQLServerDriver
 
-#  jackson:
-#    date-format: yyyy-MM-dd HH:mm:ss
-#    time-zone: GMT+8
+
+  jackson:
+    date-format: yyyy-MM-dd HH:mm:ss
+    time-zone: GMT+8
   thymeleaf:
       cache: false
       mode: HTML
